Run backend with svc loading from command line